--- a/Tray/src/main/res/layout/activity_check.xml
+++ b/Tray/src/main/res/layout/activity_check.xml
@@ -13,9 +13,9 @@
         android:clickable="true"
         android:elevation="0dp"
         app:cardCornerRadius="7dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
@@ -40,12 +40,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:gravity="center"
                 android:fontFamily="@font/poppins_semibold"
+                android:gravity="center"
                 android:text="Open Bottom Sheet"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/pleaseWaitTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Please Wait..."
+        android:textColor="@android:color/black"
+        android:textSize="22sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/openButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
