--- a/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
+++ b/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
@@ -33,16 +33,17 @@
 
         <LinearLayout
             android:id="@+id/backButton"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:orientation="vertical"
             android:layout_marginStart="16dp"
             android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:gravity="center">
+
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/chevron_left" />
         </LinearLayout>
