--- a/Tray/src/main/res/layout/fragment_wallet_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_wallet_bottom_sheet.xml
@@ -32,8 +32,8 @@
 
             <LinearLayout
                 android:id="@+id/backButton"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
@@ -42,7 +42,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/chevron_left" />
             </LinearLayout>
