--- a/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
+++ b/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
@@ -106,7 +106,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
                 <EditText
-                    android:id="@+id/editTextText"
+                    android:id="@+id/editText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -128,9 +128,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:orientation="vertical"
-                    app:layout_constraintEnd_toEndOf="@+id/editTextText"
-                    app:layout_constraintStart_toStartOf="@+id/editTextText"
-                    app:layout_constraintTop_toBottomOf="@+id/editTextText">
+                    app:layout_constraintEnd_toEndOf="@+id/edit_text_card_number"
+                    app:layout_constraintStart_toStartOf="@+id/edit_text_card_number"
+                    app:layout_constraintTop_toBottomOf="@+id/edit_text_card_number">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/ll1InvalidUPI"
