--- a/Tray/src/main/res/layout/order_summary_item.xml
+++ b/Tray/src/main/res/layout/order_summary_item.xml
@@ -39,7 +39,6 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="6dp"
                 android:fontFamily="@font/poppins"
-
                 android:text="Recurring Bill Frequency: "
                 android:textColor="#010102"
                 android:textSize="10sp"
@@ -88,8 +87,8 @@
                 android:id="@+id/textView17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_semibold"
-                android:text="₹599.00/M"
+                android:fontFamily="@font/inter_semibold"
+                android:text="₹699.00/M"
                 android:textColor="#010102"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView14"
@@ -126,7 +125,7 @@
         android:id="@+id/subItemPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins"
+        android:fontFamily="@font/inter_semibold"
         android:textColor="#010102"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView18"
@@ -137,8 +136,7 @@
         android:id="@+id/taxTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins"
-        android:text="₹0.00"
+        android:fontFamily="@font/inter_semibold"
         android:textColor="#010102"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView19"
