--- a/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
+++ b/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
@@ -128,9 +128,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:orientation="vertical"
-                    app:layout_constraintEnd_toEndOf="@+id/edit_text_card_number"
-                    app:layout_constraintStart_toStartOf="@+id/edit_text_card_number"
-                    app:layout_constraintTop_toBottomOf="@+id/edit_text_card_number">
+                    app:layout_constraintTop_toBottomOf="@+id/editText">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/ll1InvalidUPI"
@@ -145,7 +143,7 @@
                             android:src="@drawable/error_outline"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="@+id/textView4"
+                            app:layout_constraintTop_toTopOf="parent"
                             android:layout_marginBottom="3dp"/>
 
                         <TextView
@@ -159,11 +157,10 @@
                             android:text="Invalid UPI ID. Please check and retry.  "
                             android:textColor="#B9232F"
                             android:textSize="12sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/imageView5"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"/>
                     </androidx.constraintlayout.widget.ConstraintLayout>
-
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
