--- a/Tray/src/main/res/layout/fragment_payment_successful_with_details_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_payment_successful_with_details_bottom_sheet.xml
@@ -18,13 +18,34 @@
             android:layout_height="wrap_content"
             android:background="@drawable/bottom_sheet_bg">
 
+            <RelativeLayout
+                android:id="@+id/lottieAnimationViewConstraint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/lottieAnimationView"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_centerInParent="true"
+                    app:lottie_autoPlay="true"
+                    app:lottie_fileName="complete_json.json"
+                    app:lottie_loop="true" />
+
+            </RelativeLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="200dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginBottom="150dp"
                 app:layout_constraintBottom_toTopOf="@+id/proceedButton"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/lottieAnimationViewConstraint"
+                app:layout_constraintVertical_bias="0.5">
 
                 <TextView
                     android:id="@+id/textView"
@@ -109,7 +130,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="32dp"
-                    android:fontFamily="@font/poppins_medium"
+                    android:fontFamily="@font/inter_medium"
                     android:text="₹599.00"
                     android:textColor="#4F4D55"
                     android:textSize="12sp"
