--- a/Tray/src/main/res/layout/fragment_wallet_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_wallet_bottom_sheet.xml
@@ -106,6 +106,19 @@
                         app:layout_constraintStart_toStartOf="@+id/imageView"
                         app:layout_constraintTop_toBottomOf="@+id/checkingTextView" />
 
+                    <TextView
+                        android:id="@+id/noResultsFoundTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No Results Found"
+                        android:fontFamily="@font/poppins_medium"
+                        android:textColor="#000000"
+                        android:layout_marginTop="16dp"
+                        android:visibility="gone"
+                        app:layout_constraintTop_toBottomOf="@+id/searchView"
+                        app:layout_constraintStart_toStartOf="@+id/searchView"
+                        app:layout_constraintEnd_toEndOf="@+id/searchView"/>
+
                     <androidx.core.widget.NestedScrollView
                         android:id="@+id/nestedScrollView"
                         android:layout_width="match_parent"
