--- a/Tray/src/main/res/layout/fragment_payment_failure_screen.xml
+++ b/Tray/src/main/res/layout/fragment_payment_failure_screen.xml
@@ -22,7 +22,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/retryButton"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:clickable="true"
                 android:elevation="0dp"
                 app:cardCornerRadius="7dp"
@@ -30,6 +30,7 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="32dp"
+                android:background="#0D8EFF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView11"
                 app:layout_constraintStart_toStartOf="parent"
