--- a/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
@@ -453,7 +453,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:fontFamily="@font/poppins_semibold"
-                        android:text="Verify and Proceed Payment"
+                        android:text="Pay Now"
                         android:textColor="#ADACB0"
                         android:textSize="16sp" />
 
