--- a/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -45,12 +45,13 @@
                 android:id="@+id/backButton"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:orientation="vertical"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="15dp"
+                android:gravity="center"
+                android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:gravity="center">
+                app:layout_constraintTop_toTopOf="parent">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -161,37 +162,151 @@
                                 app:layout_constraintTop_toBottomOf="@+id/numberOfItems"
                                 tools:itemCount="1"
                                 tools:listitem="@layout/order_summary_item" />
+
+                            <LinearLayout
+                                android:id="@+id/priceBreakUpDetailsLinearLayout"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:weightSum="3"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginStart="14dp"
+                                android:layout_marginEnd="14dp"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/itemsInOrderRecyclerView">
+
+                                <RelativeLayout
+                                    android:id="@+id/subTotalRelativeLayout"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:visibility="gone">
+                                    <TextView
+                                        android:id="@+id/textView19"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_alignParentStart="true"
+                                        android:fontFamily="@font/poppins"
+                                        android:text="Subtotal"
+                                        android:textColor="#010102"
+                                        android:textSize="12sp"
+                                        android:visibility="visible" />
+
+                                    <TextView
+                                        android:id="@+id/subtotalTextView"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_alignParentEnd="true"
+                                        android:fontFamily="@font/inter_medium"
+                                        android:text="1234"
+                                        android:textColor="#010102"
+                                        android:textSize="12sp"
+                                        android:visibility="visible" />
+                                </RelativeLayout>
+                                <RelativeLayout
+                                    android:id="@+id/taxesRelativeLayout"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:layout_marginTop="4dp"
+                                    android:visibility="gone">
+                                    <TextView
+                                        android:id="@+id/textView22"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_alignParentStart="true"
+                                        android:fontFamily="@font/poppins"
+                                        android:text="Taxes"
+                                        android:textColor="#010102"
+                                        android:textSize="12sp"
+                                        android:visibility="visible" />
+
+                                    <TextView
+                                        android:id="@+id/taxTextView"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_alignParentEnd="true"
+                                        android:fontFamily="@font/inter_medium"
+                                        android:text="1234"
+                                        android:textColor="#010102"
+                                        android:textSize="12sp"
+                                        android:visibility="visible" />
+                                </RelativeLayout>
+                                <RelativeLayout
+                                    android:id="@+id/shippingChargesRelativeLayout"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:layout_marginTop="4dp"
+                                    android:visibility="gone">
+                                    <TextView
+                                        android:id="@+id/textView23"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_alignParentStart="true"
+                                        android:fontFamily="@font/poppins"
+                                        android:text="Shipping Charges"
+                                        android:textColor="#010102"
+                                        android:textSize="12sp"
+                                        android:visibility="visible" />
+
+                                    <TextView
+                                        android:id="@+id/shippingChargesTextView"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_alignParentEnd="true"
+                                        android:fontFamily="@font/inter_medium"
+                                        android:text="1234"
+                                        android:textColor="#010102"
+                                        android:textSize="12sp"
+                                        android:visibility="visible" />
+                                </RelativeLayout>
+                                <View
+                                    android:id="@+id/blackLine"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="2dp"
+                                    android:layout_marginTop="8dp"
+                                    android:layout_marginBottom="8dp"
+                                    android:background="#D9D9D9" />
+
+                            </LinearLayout>
+
+
+
                             <RelativeLayout
                                 android:id="@+id/totalValueRelativeLayout"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:orientation="horizontal"
                                 android:layout_marginStart="14dp"
                                 android:layout_marginEnd="14dp"
+                                android:orientation="horizontal"
                                 app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="@+id/itemsInOrderRecyclerView"
-                                app:layout_constraintTop_toBottomOf="@+id/itemsInOrderRecyclerView">
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/priceBreakUpDetailsLinearLayout">
+
 
                                 <TextView
                                     android:id="@+id/textView18"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_alignParentStart="true"
                                     android:fontFamily="@font/poppins"
                                     android:text="Total"
                                     android:textColor="#010102"
                                     android:textSize="12sp"
-                                    android:visibility="visible"
-                                    android:layout_alignParentStart="true"/>
+                                    android:visibility="visible" />
 
                                 <TextView
                                     android:id="@+id/ItemsPrice"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:fontFamily="@font/inter_semibold"
-                                    android:textColor="#010102"
-                                    android:text="1234"
-                                    android:textSize="18sp"
                                     android:layout_alignParentEnd="true"
+                                    android:fontFamily="@font/inter_semibold"
+                                    android:text="1234"
+                                    android:textColor="#010102"
+                                    android:textSize="18sp"
                                     android:visibility="visible" />
                             </RelativeLayout>
 
@@ -216,9 +331,9 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="12dp"
                         android:layout_marginEnd="16dp"
+                        android:visibility="gone"
                         app:cardCornerRadius="8dp"
                         app:cardElevation="0dp"
-                        android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView12">
@@ -717,9 +832,9 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="12dp"
                         android:layout_marginEnd="16dp"
+                        android:visibility="gone"
                         app:cardCornerRadius="8dp"
                         app:cardElevation="0dp"
-                        android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/cardView6">
