--- a/Tray/src/main/res/layout/fragment_wallet_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_wallet_bottom_sheet.xml
@@ -452,7 +452,8 @@
                         android:layout_height="15dp"
                         android:layout_centerInParent="true"
                         android:indeterminateDrawable="@drawable/loader_01"
-                        android:rotation="90" />
+                        android:rotation="90"
+                        android:visibility="gone"/>
 
                     <TextView
                         android:id="@+id/textView6"
