--- a/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,6 +8,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bottom_sheet_bg">
+
+
 
     <FrameLayout
         android:id="@+id/overlayContainer"
@@ -15,13 +19,13 @@
         android:visibility="gone" />
 
 
+
     <LinearLayout
         android:id="@+id/linearLayoutMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="1">
-
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/topConstraint"
@@ -1190,12 +1194,40 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:src="@drawable/boxpay_copyright" />
+
                     </LinearLayout>
-
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
+                <RelativeLayout
+                    android:id="@+id/loadingRelativeLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
+                    android:background="#E6FFFFFF">
 
+                    <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/boxpayLogoLottie"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginTop="32dp"
+                        app:lottie_fileName="boxpayLogo.json" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/boxpayLogoLottie"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="8dp"
+                        android:fontFamily="@font/poppins"
+                        android:text="Loading..."
+                        android:textColor="#4F4D55" />
+
+                    <!--                        app:lottie_autoPlay="true"-->
+
+                </RelativeLayout>
             </FrameLayout>
         </androidx.core.widget.NestedScrollView>
+
+
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
