Some bugs solved

--- a/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
+++ b/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
@@ -85,7 +85,7 @@
                     android:layout_marginStart="5dp"
                     android:fontFamily="@font/poppins_bold"
                     android:gravity="center"
-                    android:text="Add UPI ID"
+                    android:text="Enter UPI ID"
                     android:textColor="#2D2B32"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -154,7 +154,7 @@
                             android:enabled="false"
                             android:fontFamily="@font/poppins"
                             android:gravity="center"
-                            android:text="Invalid UPI ID. Please check and retry.  "
+                            android:text="Invalid UPI ID"
                             android:textColor="#B9232F"
                             android:textSize="12sp"
                             app:layout_constraintStart_toEndOf="@+id/imageView5"
