--- a/Tray/src/main/res/layout/fragment_cancel_confirmation_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_cancel_confirmation_bottom_sheet.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="Payment Cancellation"
+                android:text="Cancel Payment"
                 android:textColor="#2D2B32"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
                 android:layout_marginTop="24dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:gravity="center"
-                android:text="Are you sure you want to \ncancel the payment?"
+                android:text="The payment is on going, are you sure you\n want to cancel the payment in between?"
                 android:textColor="#2D2B32"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -48,11 +48,8 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:layout_marginBottom="10dp"
                 android:fontFamily="@font/poppins"
                 android:gravity="center"
-                android:text="This payment request cancels only if you \nhaven't finished the payment "
                 android:textColor="#4F4D55"
                 app:layout_constraintBottom_toTopOf="@id/yesButton"
                 app:layout_constraintEnd_toEndOf="parent"
