--- a/Tray/src/main/res/layout/fragment_add_card_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_add_card_bottom_sheet.xml
@@ -94,9 +94,11 @@
                         android:hint="Please enter name on your card"
                         android:inputType="text"
                         android:paddingStart="12dp"
+
                         android:paddingTop="8dp"
                         android:paddingBottom="8dp"
                         android:textColorHint="#7F7D83"
+                        android:textColor="#000000"
                         android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="@+id/nameOnCard"
                         app:layout_constraintTop_toBottomOf="@+id/nameOnCard"
@@ -166,6 +168,7 @@
                             android:paddingEnd="60dp"
                             android:paddingBottom="8dp"
                             android:textColorHint="#7F7D83"
+                            android:textColor="#000000"
                             android:textSize="14sp"
                             tools:ignore="TouchTargetSizeCheck" />
 
@@ -231,6 +234,7 @@
                             android:fontFamily="@font/poppins"
                             android:gravity="center_vertical"
                             android:hint="Enter CVV"
+                            android:textColor="#000000"
                             android:inputType="numberPassword"
                             android:maxLength="4"
                             android:paddingStart="12dp"
@@ -350,6 +354,7 @@
                                 android:paddingTop="8dp"
                                 android:paddingBottom="8dp"
                                 android:textColorHint="#7F7D83"
+                                android:textColor="#000000"
                                 android:textSize="14sp"
                                 tools:ignore="TouchTargetSizeCheck" />
 
