--- a/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
+++ b/Tray/src/main/res/layout/fragment_add_u_p_i_i_d.xml
@@ -117,6 +117,7 @@
                     android:inputType="text"
                     android:padding="8dp"
                     android:textColorHint="#7F7D83"
+                    android:textColor="#000000"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
