--- a/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
@@ -102,6 +102,7 @@
                         android:iconifiedByDefault="false"
                         android:queryBackground="@null"
                         android:queryHint="Search for banks"
+                        android:textColor="#000000"
                         android:searchIcon="@drawable/searchicon"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/imageView"
