--- a/app/src/main/res/layout/activity_merchant_details_screen.xml
+++ b/app/src/main/res/layout/activity_merchant_details_screen.xml
@@ -11,19 +11,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:hint="Enter merchant ID"
+        android:hint="Enter Session Token"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
-    <EditText
-        android:id="@+id/editTextText2"
+    <Spinner
+        android:id="@+id/environmentSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:hint="Enter API Key"
+        android:hint="Select Environment"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/editTextText"
         app:layout_constraintStart_toStartOf="@+id/editTextText"
@@ -41,5 +41,5 @@
         android:background="@drawable/button_bg"
         android:textColor="#FFFFFF"
         android:fontFamily="@font/poppins_semibold"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
+        app:layout_constraintTop_toBottomOf="@+id/environmentSpinner" />
 </androidx.constraintlayout.widget.ConstraintLayout>
