--- a/Tray/src/main/res/layout/fragment_wallet_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_wallet_bottom_sheet.xml
@@ -391,7 +391,8 @@
                         android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView">
+                        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
+                        app:layout_constraintBottom_toBottomOf="parent">
 
                         <ImageView
                             android:id="@+id/imageView5"
