--- a/Tray/src/main/res/layout/wallet_item.xml
+++ b/Tray/src/main/res/layout/wallet_item.xml
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/walletLogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_marginStart="2dp"
             android:layout_marginTop="14dp"
             android:layout_marginBottom="14dp"
