--- a/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bottom_sheet_bg"
-    >
+    android:background="@drawable/bottom_sheet_bg">
 
     <FrameLayout
         android:id="@+id/frameLayout1"
