--- a/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -9,7 +9,6 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bottom_sheet_bg">
 
-
     <FrameLayout
         android:id="@+id/overlayContainer"
         android:layout_width="match_parent"
@@ -134,7 +133,6 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/inter_semibold"
-                                android:text="₹1198.00"
                                 android:textColor="@android:color/black"
                                 android:textSize="16sp"
                                 app:layout_constraintBottom_toTopOf="@+id/itemsInOrderRecyclerView"
@@ -306,7 +304,6 @@
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentEnd="true"
                                     android:fontFamily="@font/inter_semibold"
-                                    android:text="1234"
                                     android:textColor="#010102"
                                     android:textSize="18sp"
                                     android:visibility="visible" />
@@ -562,7 +559,8 @@
                                     android:layout_weight="1"
                                     android:paddingTop="12dp"
                                     android:paddingEnd="12dp"
-                                    android:paddingBottom="12dp">
+                                    android:paddingBottom="12dp"
+                                    android:visibility="gone">
 
                                     <ImageView
                                         android:id="@+id/itemImage"
@@ -615,7 +613,8 @@
                                     android:layout_weight="1"
                                     android:paddingTop="12dp"
                                     android:paddingEnd="12dp"
-                                    android:paddingBottom="12dp">
+                                    android:paddingBottom="12dp"
+                                    android:visibility="gone">
 
                                     <ImageView
                                         android:id="@+id/imageView15"
@@ -649,6 +648,120 @@
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintTop_toTopOf="@+id/textView26"
                                         app:srcCompat="@drawable/grey_color_right_arrow" />
+
+                                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                                <View
+                                    android:id="@+id/dashedLine3"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="2dp"
+                                    android:background="@drawable/dashed_line"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toBottomOf="@+id/payUsingAnyUPIConstraint" />
+
+                                <androidx.constraintlayout.widget.ConstraintLayout
+                                    android:id="@+id/UPIQRConstraint"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:paddingTop="12dp"
+                                    android:paddingEnd="12dp"
+                                    android:paddingBottom="12dp"
+                                    android:visibility="gone">
+
+                                    <ImageView
+                                        android:id="@+id/imageView25"
+                                        android:layout_width="16dp"
+                                        android:layout_height="16dp"
+                                        android:layout_marginStart="12dp"
+                                        android:layout_marginTop="2dp"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toTopOf="parent"
+                                        app:srcCompat="@drawable/qr_code_icon" />
+                                    <TextView
+                                        android:id="@+id/textView46"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginStart="6dp"
+                                        android:fontFamily="@font/poppins"
+                                        android:text="Pay using QR"
+                                        android:textColor="#595E6A"
+                                        android:textSize="16sp"
+                                        app:layout_constraintBottom_toBottomOf="@+id/imageView25"
+                                        app:layout_constraintStart_toEndOf="@+id/imageView25"
+                                        app:layout_constraintTop_toTopOf="@+id/imageView25" />
+                                    <ImageView
+                                        android:id="@+id/imageView23"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        app:layout_constraintBottom_toBottomOf="@+id/textView46"
+                                        app:layout_constraintEnd_toEndOf="parent"
+                                        app:layout_constraintTop_toTopOf="@+id/textView46"
+                                        app:srcCompat="@drawable/grey_color_right_arrow" />
+                                    <androidx.constraintlayout.widget.ConstraintLayout
+                                        android:id="@+id/qrCodeOpenConstraint"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        app:layout_constraintTop_toBottomOf="@+id/textView46"
+                                        android:visibility="gone">
+
+                                        <ImageView
+                                            android:id="@+id/qrCodeImageView"
+                                            android:layout_width="100dp"
+                                            android:layout_height="100dp"
+                                            android:layout_marginStart="12dp"
+                                            android:layout_marginTop="16dp"
+                                            app:layout_constraintBottom_toBottomOf="parent"
+                                            app:layout_constraintStart_toStartOf="parent"
+                                            app:layout_constraintTop_toTopOf="parent" />
+
+                                        <androidx.appcompat.widget.AppCompatButton
+                                            android:id="@+id/refreshButton"
+                                            android:layout_width="100dp"
+                                            android:layout_height="30dp"
+                                            app:layout_constraintBottom_toBottomOf="parent"
+                                            app:layout_constraintEnd_toEndOf="@+id/qrCodeImageView"
+                                            app:layout_constraintStart_toStartOf="@+id/qrCodeImageView"
+                                            app:layout_constraintTop_toTopOf="@+id/qrCodeImageView"
+                                            android:background="@drawable/button_bg"
+                                            android:text="Refresh"
+                                            android:gravity="center"
+                                            android:visibility="gone"
+                                            android:fontFamily="@font/poppins_semibold"/>
+
+                                        <TextView
+                                            android:id="@+id/textView49"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:layout_marginStart="16dp"
+                                            android:fontFamily="@font/poppins_medium"
+                                            android:text="Scan &amp; Pay with UPI application"
+                                            android:textColor="#010102"
+                                            app:layout_constraintStart_toEndOf="@+id/qrCodeImageView"
+                                            app:layout_constraintTop_toTopOf="@+id/qrCodeImageView" />
+
+                                        <TextView
+                                            android:id="@+id/textView44"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:layout_marginTop="8dp"
+                                            android:fontFamily="@font/poppins"
+                                            android:text="QR code will expire in"
+                                            android:textColor="#595E6A"
+                                            android:textSize="16sp"
+                                            app:layout_constraintStart_toStartOf="@+id/textView49"
+                                            app:layout_constraintTop_toBottomOf="@+id/textView49" />
+
+                                        <TextView
+                                            android:id="@+id/qrCodeTimer"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/poppins_medium"
+                                            android:layout_marginTop="8dp"
+                                            android:textColor="#b9222f"
+                                            app:layout_constraintStart_toStartOf="@+id/textView44"
+                                            app:layout_constraintTop_toBottomOf="@+id/textView44"/>
+                                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -1206,8 +1319,7 @@
                         android:id="@+id/boxpayLogoLottie"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:layout_centerHorizontal="true"
-                        android:layout_alignParentTop="true"
+                        android:layout_centerInParent="true"
                         android:layout_marginTop="32dp"
                         app:lottie_fileName="boxpayLogo.json" />
                     <TextView
@@ -1225,7 +1337,6 @@
                 </RelativeLayout>
             </FrameLayout>
         </androidx.core.widget.NestedScrollView>
-
 
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
