--- a/Tray/src/main/res/layout/fragment_upi_q_r_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_upi_q_r_bottom_sheet.xml
@@ -18,14 +18,14 @@
             android:layout_height="match_parent"
             android:background="@drawable/bottom_sheet_bg"
             app:layout_anchorGravity="center">
-            <TextView
-                android:id="@+id/sampleTextView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Message Fetched will come here"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:gravity="center"/>
+            <ImageView
+                android:id="@+id/qrCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
